--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.20.1",
-    "@strapi/plugin-users-permissions": "4.20.1",
-    "@strapi/plugin-i18n": "4.20.1",
     "@strapi/plugin-cloud": "4.20.1",
+    "@strapi/plugin-i18n": "4.20.1",
+    "@strapi/plugin-users-permissions": "4.20.1",
+    "@strapi/provider-upload-cloudinary": "^4.20.1",
+    "@strapi/strapi": "4.20.1",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
