--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@strapi/provider-upload-cloudinary": "^4.20.1",
     "@strapi/strapi": "4.20.1",
     "better-sqlite3": "8.6.0",
+    "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
